--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -314,7 +315,56 @@ now im going to sleep hope you sleeping well.<br>
                so good night sleep well<br>
                love you ^-^<br>
                i'll say about this project tomorrow<br><br>
+               <hr><br>
 
+               15-oct-2023 : 11:24AM<br>
+               Ohiio Mitsuha Chan 😊<br>
+               Hope you are doing well, how's your days?
+               <br> how are you? are you sleeping properly<br>
+               .. mine today i woke up around 9AM<br>
+               im fine and doing good..<br>
+               <br>
+               wanna see my project  😄 <br>
+               im curious to show it to you  😄😄 
+<br><br>
+my total me <br>
+<img src="teaam.jpeg"/><br>
+<img src="team.jpeg"/><br>
+all the member with me are a single in previous competetion.
+now based on new competetion on my team got nominated and this time as per rules only contain 3 members and a female mandatory to represent women education support<br>
+that why i have 2 sisters in my team<br>
+form that-<br>
+Anusha <br>
+ Priya (CSM or Class-D Leader) <br>
+ Vijay , these three are from same class as mine: CSM or Class-D<br>
+Harsha CSE or  class -A leader <br>
+Mehaboob (CSE or class -c )<br>
+Your Idiot - Team leader  😄 <br>
+😑 but dont laugh at MY team photos in this 2nd competetion, i just tried of best to respect Adhar card of india<br>
+I love my country<br>
+bad bad team 2 dont respect Adhar card photos 😅 <br> just kidding but im serious 😑<br>
+India is my country and indians are my brothers and sisters Except you 😊<br><br>
+and when come to project<br>
+<img src="project.png"/><br>
+this is my project design, i made it for helping blind people in Artificial intellegence Vision<br>
+i hope my project got select to the next level<br><br>
+<br>
+huh!!! keep this aside<br>
+so tell me how you doing with your studies?<br>
+Are you still anger on me 👉👈<br>
+i guess you don't get a chance to reply and here im again started writing novel<br>
+gomen<br>
+i'll try my best to not make it remain a novel<br>
+okok amma calling me not its 12:35PM , im going for eye check-up today due to over work of projects and presentation from 3 weeks straight 14hrs infront of screen. eyes are still fine but amma saying me to get a computer glasses and mobile, but i refuse to buy a new mobile i bought a laptop for seshant with my saving and the money for new mobile<br>
+you know what last night i got tomatos in head again for not sleeping early 🙄<br>
+and did you remeber you suggested me a spects im going to buy it soon<br>
+but bad bad people someone stole my steel water bottle bad bad<br>
+im going to buy that one new also after getting spects i'll show you<br>
+now im going <br>
+Ittekimas<br>
+Love you honey😊<br>
+i'll be home soon<br><br>
+👉👈 waiting for your questions also 🙄<br><br>
 
 <!--- end of pass--->  
 <br><hr><br>
