--- a/index.html
+++ b/index.html
@@ -366,6 +366,9 @@ Love you honey😊<br>
 i'll be home soon<br><br>
 👉👈 waiting for your questions also 🙄<br><br>
 
+Honey... im home about 7:30PM<br>
+now its 10:12PM now power went off and laptop battery also very low so Good night!!!<br>
+
 <!--- end of pass--->  
 <br><hr><br>
 
