--- a/index.html
+++ b/index.html
@@ -369,6 +369,40 @@ i'll be home soon<br><br>
 Honey... im home about 7:30PM<br>
 now its 10:12PM now power went off and laptop battery also very low so Good night!!!<br>
 
+<hr><br>
+16-oct-2023 | 9:23PM<br>
+Mitsuha...<br>
+how are you Mitsuha?<br>
+its been a week 🙄 are you still anger on me, im really really sorry for my late that time<br>
+one thing i honestly can say there no girl in exist in my mind and soul other than you...<br>
+i will try to not repeat the late again,<br>
+aside sometimes my thoughts like you are busy in devi pooja event like that and due to exams and study you dont got anytime<br>
+...<br>
+and oiii dont think again there fan girl 😑 like trash again. i only want you, its only you, all im asking,pray for god is you. don't everthink like something like im running behind someone okkk!!!<br>
+🙄 i wanna hear your voice, if you don’t mind and if you get chance can i... get a audio note from you 👉👈<br>
+don’t risk only if possible to you👉👈<br>
+🙄 if you still have a dought or thought like im talking and being friend with other girls in my class or around its not a problem, i'll prove myself to my women<br>
+cz i love my girl sooomuch, she always stay in my mind she occupied enough of my mind and soul where there no place left to other girls except to himawari<br>
+i'll prove myself, i can understand why thoughts like that come in your mind, cz even im watching everyday types of people looking kind and cheating their parter and even cheating their parents. more over there my bestfriend the kind of person.<br>
+now im staying away from him, not only him all the people around me.<br>
+still i belive that i can prove myself to my women how my mother raise me, and what my character is...<br>
+and how much i love my girl, i belive that one day god make us together, to show my love to you rest of the life. and even after...<br>
+i maybe overthinker and an introvert but i never allowed a girl to come around my mind after you, i didn't allowed anyone to comfort me, <br>
+mostly i started i solation in a social envirement to keep myself pure for you, to keep mylove strong for you.<br>
+forgive me if i said any wrong or uncomfortable<br>
+🙄 im too much overthinking about health, cz i felt something like you did that scratch thing again and you aren't fine<br>
+i may don't know what exactly is going but my soul still bothering, asking again and again how is puja is she ok?, 🙄 im too embraced to saythis in previous, and the same time my soul remind me words between us <br>
+" whatever the thing how many obstacles between us, what ever happen lets talk each other and solve , lets dont keep anything in each other"-- you the one said me these a long ago... <br>
+isn't it?<br>
+🙄 amd all now i wanna hear you, its been 4 months what that happened,<br>
+i still dont know what make you think like im started behind someone other than you, except the period of project and competetion , i dodn't allow myself to talk to other girls, you or me amma none said me to do like this its all i choosed myself to me<br>
+all i truly know from the bottom of my heart is that, i love you soo much more and more, if i say what running in my mind 😥, im a little embreaced but still what runing in mind is something like i want you to bite me slap me, put tomatos on head scold on me kick me... then Hug me tightly i want something like this now<br>
+i wanna hug you tight , i wanna kiss your head, i wanna cry in your laps for asking forgiveness if i do any wrong, cz all i want in my life is you, all i wish and pray god all time for that...<br>
+love you so much Puja , im sure and heartfully say that im not a person who attempt to abond/cheat/do_bad i'll prove myself, <br>
+Always love you soo much<br>
+
+
+
 <!--- end of pass--->  
 <br><hr><br>
 
