--- a/index.html
+++ b/index.html
@@ -399,7 +399,14 @@ i still dont know what make you think like im started behind someone other than 
 all i truly know from the bottom of my heart is that, i love you soo much more and more, if i say what running in my mind 😥, im a little embreaced but still what runing in mind is something like i want you to bite me slap me, put tomatos on head scold on me kick me... then Hug me tightly i want something like this now<br>
 i wanna hug you tight , i wanna kiss your head, i wanna cry in your laps for asking forgiveness if i do any wrong, cz all i want in my life is you, all i wish and pray god all time for that...<br>
 love you so much Puja , im sure and heartfully say that im not a person who attempt to abond/cheat/do_bad i'll prove myself, <br>
-Always love you soo much<br>
+Always love you soo much<br><br>
+<hr>
+<br>
+17-oct-2023 : 9:30PM<br>
+sorry again i wrote a novel 🙄<br>
+if start again writing now it may become longer and longer i guess,<br>
+im waiting for you👉👈...<br>
+Good night sleep well<br>
 
 
 
