--- a/index.html
+++ b/index.html
@@ -407,8 +407,42 @@ sorry again i wrote a novel 🙄<br>
 if start again writing now it may become longer and longer i guess,<br>
 im waiting for you👉👈...<br>
 Good night sleep well<br>
+<br><hr><br>
+18-october-2023 : 9:07PM<br>
+<i>😳🫣 Baka BAKAAA! 
+Your words hit through my heart the 16th October  one.. stop it 😑</i><br>
+i may stop writing words, but the love in my soul for you will always be like that...<br><br>
+<i>Oi if I get chance then I will right.. there is thos big festival going on and you know I have this pressure on me of studies like have to complete whole one year syllabus within 2 months , you see there is lot and lot I barely get time to get phone and if I take phone then my mother keep looking what I do.. 
+</i><br>
+i understood and,<br>
+Happy navaratri to you, whishing you to always be happy , healthy and safe😊.<br>
+okok so don't get into trouble, and do wish for strength 😊<br>
+you will definietly gonna do well in exams, youb are the best😊<br> lets do our best in studies.<br>
+<br>
+<i>For now I will just like to say that take care for yourself and your future , rest will be set if god's want !
+      And wait little longer for my reply let me get the proper opportunity ok!
+       And I am not thinking any weird or bad bad because I am not getting time😅😵 </i><br>
+       sure i understood your stutation and these busy days, and oiii... you should also do well take care of yourself ok!!!<br>
+       and when come to god, what god said is...<br>
+       <b>"Love never fail, if its fail its not love"</b><br>
+       i strongly believe that god always on ourside, to guide on our actions...<br>
+       <br>
+       <i>By the way do socialize and don't be in isolation</i><br>
+       yes yes 😅 i'll try 😅, im not islating im just... just a little anti social <br>
+       you know what, on 20th-oct there a "Fresher's party in mycollege", one which we give welocome party like fair wall to our juniors<br>
+       🙄 i refuse to attend it ... 😅<br><br>
 
+       <i>Be the boy the man who a girl a lady can rely on, be my Atlas be Adrien be chat noir ,🙄 ah what am I saying weird 🙄 excuse me </i><br>
+       sure my Marinet and,  im always your Black cat.<br><br>
 
+       <i>I am trying to say that be strong and successful in your life and most importantly be a gentleman.</i><br>
+       Sure as you said, i'll stand and prove it...<br><br>
+
+       and oii, please be safe ok, during pooja, and all the time. and dont forget to take rest OK!<br>
+       so now im going to sleep,<br>
+       Good night, sleep well, sweet dreams <br>
+       My Hinata💝<br>
+       Always Love you😋<br>
 
 <!--- end of pass--->  
 <br><hr><br>
