--- a/index.html
+++ b/index.html
@@ -424,7 +424,10 @@ you will definietly gonna do well in exams, youb are the best😊<br> lets do ou
        And I am not thinking any weird or bad bad because I am not getting time😅😵 </i><br>
        sure i understood your stutation and these busy days, and oiii... you should also do well take care of yourself ok!!!<br>
        and when come to god, what god said is...<br>
-       <b>"Love never fail, if its fail its not love"</b><br>
+       <b>"Love never fail, if its fail its not love,<br>
+        Love is patient and kind; love does not envy or boast; it is not arrogant or rude. 
+        It does not insist on its own way; it is not irritable or resentful; it does not rejoice at wrongdoing,
+         but rejoices with the truth."</b><br>
        i strongly believe that god always on ourside, to guide on our actions...<br>
        <br>
        <i>By the way do socialize and don't be in isolation</i><br>
@@ -442,7 +445,52 @@ you will definietly gonna do well in exams, youb are the best😊<br> lets do ou
        so now im going to sleep,<br>
        Good night, sleep well, sweet dreams <br>
        My Hinata💝<br>
-       Always Love you😋<br>
+       Always Love you😋<br><br>
+
+       <hr>
+       <br>
+       19-oct-2023 9:25PM<br>
+       oiii Hinata💝 Aiesteru<br>
+       today i got something for you😋<br>
+       here it is<br>
+       <a href="https://drive.google.com/file/d/1R7y-UDvVjVSh3fxVkr-PeeiAsOZxHPmy/view?usp=sharing">Click to see ^-^</a><br>
+       if language problem try to go with mx-player to get it in english<br>
+       hope you are doing well, <br>
+       oi from today im again going to start 21day study challege and tuff study schedule again cz i come to know my semister 1 exams at december 3rd week, im going to ace it , hehe!!<br>
+       you know what none got straight A's or B's in all subjects from these exams from my college, Hehehe!!! im going to set a record, and gonna Give them all a reason to remeber my name<br>
+       lets study hard lets do our best<br>
+       nO matter what, None of disturbances in ocean can't hold be back from moving forward.<br>
+       here it go like : i Need to win thats the only option i have like the only choice In my life(you)<br>
+       if i win im going to win, same for lose also, but to Win i need to fight fight with all the distractions and distructions, in order to win im going to Fight, <br>
+       nomatter what how it going to be done, no matter what how much effort im going to put. <br>
+       if the effort is small result will be like that, same with good effort. the word "luck" is just a fantasy of one who dont believe in self and their strength,<br>
+       even god said "do whatever you wanna do, before that make sure you dedicated with heart and soul to win it, forget about obstacles. as long as you don't choose to give up on self, i will also choose to never you loose"<br>
+       amazing isn't it<br>
+       Mom said me those words back then in days<br>
+       and also said, moreover in the end we going to win, just see the vision and the result of that winnning.<br>
+       And we should really need to go proud cause God made us born Dumb, cz god want to see our potential to build ourself<br>
+<br>
+Oiii<br>
+Repeat these Words morning in your mind everyday<br>
+<b>Im the best, im going to win.</b><br>
+<br>
+Lets ace our exams ... Tatakae<br>
+arey... now again power cut laptop also very low charge<br>
+Good night<br>
+sleep well come in my dreams<br>
+see ya soon<br>
+Alwats Love you My Hinata💝<br><br>
+
+
+
+
+
+
+
+
+
+
+
 
 <!--- end of pass--->  
 <br><hr><br>
