--- a/index.html
+++ b/index.html
@@ -481,7 +481,43 @@ sleep well come in my dreams<br>
 see ya soon<br>
 Alwats Love you My Hinata💝<br><br>
 
+<hr>
+               <br>
 
+               21-oct-2023 9:58PM<br>
+               How you are doing potato?<br>
+               from today to 23rd of this month we got holidays, huh! not holidays some home time to complete assignments<br>
+               you know what, all the way far, one of my professor named Satish Aisthey<br>
+               a good teacher, and when the 1st class of this semister, This sir asked all the class to a introdction, goals and rest. with a thing include along<br>
+               "Who's your best teacher till now?"<br>
+               that day im shy outed introvert introduction bla bla, <br>
+               But, yesterday this teacher called Me and asked in detail, who really am i? <br>
+               then he said that he liked my skill well, and even in previous lab periods few times he tried to know well about me<br>
+               but this time he said after holiday notice , while everyone leaving the class Satish sir called me and said, " i started to like the way you deal things and he made me remeber you <br>
+               by saying 'you have solution for most situations, even you dont have one, i like the way you create it' and replied him this was the best most thing ican hear from you after my closest one<br>
+               then he asked me is anything you need to say before we left, i said probably not, But if i can ask one thing it goes like this "You asked us in first class, whos the best teacher we met, when i turn that question to you who is the best student in your career.<br>
+               he replied "this was the first time i heard this question from someone i hold hope. here i said holding hope's cz, from the day i start to know you i understood You are something special "<br>
+               then he said "You gave me a Reason to remember your name, Not only from class-D from my years of teaching experience"<br>
+               you know what im so amazed with his words, i thought its a dream. and i asked "Do i worth for that, i mean why me, why you choosed me to hold hopes and to be your favourite student "<br>
+               He replied, its not the i did after expectations, i just said you what in my realm you are, now you know it:  i guess its propably your time to prove does it worth or not. and As a teacher morely as a friend i will try mybest to help you all the time for you to fight, in end He said " Try to socialise,dont be that antisocial" what this man -_-<br>
+               i was just stuck in that movement its all just happen like something, <br>
+               you said "be a man a girl will rely on" just after you sir said be a student where other students rely on, <br>
+               you people just amazing coincidence made my mind go high<br>
+               <br>
+              
+               then while im leaving college; Class-d leader Priya-sis called me and said "shall i call you topper, satish sir said me something: well its not a matter what it would it would be, i'll know it myself. for now i can say see you soon"<br>
+               huh! i guess this was my weird vacation start<br>
+               after her i replied " i dont know what in your mind sis or even what sir said to you. Here what all exist in my mind is only my way. for now my way is to catch train so BYE "<br>
+                while im still planning for holidays, what i need to do, some crazy people took me a little high, not only satish sir, Harsha-The class a leader said in train " Do whatever as you wish, i will follow your path commands"<br>
+              what happen to these people, huh !<br>
+               but now im so tired, i might go to sleep now, if i come to wake up after 12AM i will try to eat something else i will eat tomorrow morning<br>
+               and im planning to learn something new this holidays along i'll try to restart my bengali language also<br>
+               FOr now GOod night Puja<br>
+               Love you so Much<br>
+               sleep well sweet dreams<br>
+               My Hinata💝<br>
+            Always love you SO much<br><br>
+                                                                                                                                                                                                            
 
 
 
