--- a/index.html
+++ b/index.html
@@ -518,7 +518,26 @@ Alwats Love you My Hinata💝<br><br>
                My Hinata💝<br>
             Always love you SO much<br><br>
                                                                                                                                                                                                             
-
+<br>
+               <hr>
+               <br>
+               22-oct-2023 10:41PM<br>
+               i guess you still under the business of navaratri, i had a doubt here. like how you celebrate these, here in my locality or in ap region its like 9days <br>
+               <br>
+               keeping that aside, <br>
+               tell me how is your health,,, oii say me this how many bottles are you taking these days. im asking this rare.<br>
+               and tell me how is your M-cycle health, <br>
+               please do well take care of yourself ok!!!<br>
+               dont forget that we need to roam the world so be healthy and stay healthy<br>
+               now its about 11PM so im going to sleep, i thought holidays would be fun now i understood the pain of this homwwork<br>
+               haaaaah! stupid homework, hehe<br>
+               oiii Hinata lets sleep its getting late<br>
+               Good night, sweet dreams come in my dreams give me K's<br>
+               sleep well<br>
+               Always love you somuch Honey<br>
+               My sweet potato<br>
+               Love you sooo much<br><br>
+               <hr><br>
 
 
 
