--- a/index.html
+++ b/index.html
@@ -540,6 +540,47 @@ Alwats Love you My Hinata💝<br><br>
                <hr><br>
 
 
+<br>
+23-oct-2023 8:10PM<br>
+
+Potato, My sweet potato <br>
+how  you're doing, hope everything is well.<br>
+today i wanna share you something i watched from a movie today<br>
+In the Movie there is a beautiful garden but everyone see it as a fantasy just like it dont exist, beside a ground with a tall building like garden but most believe in this and for few its just a night mare, and a huge place out there, crowd people all the time. noisy world, messed up things. There this person TOPU promised his girl to take to that beautiful garden one day the girl laughed and said be real fantasy's are good to talk.<br>
+you know what happen next, something happened in their place like ecarpolyps they both got seperated from each other. so painful right, they gone to where like it's all end, one day the boy send a object using a birld to his girl, to say he's alive. His girl BUNN replied him, they arranged a " CUP and wire telephone " to speak to each other.<br>
+Days going, TOPU trying his hard to finding the way to the beautiful Gargen to take his girl and spend the rest of the life with her, want to show all the best love he can to his girl.<br>
+One fine day both were going some place not knowing eachother the girl accidentally entered the tall building, they monster's started toward her in the building she started screaming, where she sawn a dump monster fighiting other monster's, she was so scared. <br>
+the dump monster started toward her. BUNN scared and screaming loud, she taught that monster going to hurt her, when the monster reached close to her.<br>
+BUNN strongly punched on monster stomach, then bite monsters hand. That dumb monster looked into her eyes and said don't worry its me. then removed its monster mask, they girl amazed and said i don't know TOPU you are wearing this mask and rage picker T-shirt but i sensed its you.<br>
+the boy TOPU, replied 'Even i turned a monster i would rather die myself then hurting you'<br>
+That day when they met like that in that tall building BUNN's nightmare got wiped out, they left the building. they started some way together, And here TOPU always annoying her asking for Kisses. And when she go anger on him, then TOPU calm BUNN by Biting her...............................................................................................................................................................................................................................................................................................................................................................................................Cheeks . HEHEHE!!!<br>
+they reached a sea shore in their way, TOPU took BUNN on his back a piggy back ride for BUNN they were two giong alone, BUNN used to say so many things, stories a cute talkative girl, TOPU a silent nerd guy, few time a stupid to BUNN. <br>
+while they were going BUNN layed her head on TOPU shoulder and said " I always believe in you TOPU do your best for us to spend our life together, When we reacher to the, at entrance i will give you the kiss you always asked for as many as you want..."<br>
+TOPU, replied looking into her eyes, "No matter what to keep and stand on the promise i made you, i'll do mybest , whatever the situation is i'll never give up on us. to get all my kisses to the rest of the life from youuu ^-^ "<br>
+its getting night, they both lye on the sand watching sky, twinkling star's hearing the ocean's waves feeling the air. locked into eachother eyes, TOPU listening to BUNN's beautiful voice when she telling stories...<br>
+TOPU rise and sit beside BUNN, take her into lap, holding her hand, they both watching the moon and star's<br>
+.................<br>
+......<br>
+....<br>
+..<br>
+.<br>
+TOPU looked called BUNN while looking sky, looked into BUNN eyes, Kissed her forehead BUNN cheeks got tomato red and looking into his eyes and in few minutes Fell into sleep.<br> TOPU smiled and said,<br>
+<b> GOOD NIGHT MY PRINCES<br>
+No matter how things change you, My Love always stay pure and unconditional for you. <br>
+Im always your idiot<br>
+<br>
+Always laughing you so much, always more and more<br>
+by watching cute BUNN sleeping like a cute kid and playing with her Hair<br>
+<br>
+
+GOOD NIGHT MY bunnY<br>
+sleep well<br>
+YOUR OCtopuS<br>
+always laughing you, and waiting for the day's where kissing my bunny's head every day before sleeping.<br>
+
+  </b> 
+<br><br>
+
 
 
 
