--- a/index.html
+++ b/index.html
@@ -580,7 +580,17 @@ always laughing you, and waiting for the day's where kissing my bunny's head eve
 
   </b> 
 <br><br>
-
+<hr>
+               <br>
+               24-october-2023 8:25PM<br>
+               how are you, Mitsuha?<br>
+               mine holidays end today, from tomorrow again clg<br>
+               holidays went like nothing,  apart im missing you 🙄,<br>
+               now...........feeling alittle low, <br>
+               i guess i would go sleep now,<br>
+               So,<br>
+               Good night, sleep well.<br>
+               Im gonna fall a sleep by listening to my sweet potato😊<br><br>
 
 
 
