--- a/index.html
+++ b/index.html
@@ -592,7 +592,18 @@ always laughing you, and waiting for the day's where kissing my bunny's head eve
                Good night, sleep well.<br>
                Im gonna fall a sleep by listening to my sweet potato😊<br><br>
 
-
+<hr>
+               <br>
+25-october-2023 8:57PM<br>
+<br>
+oiii are you trimming your nails for every 3 days and tell me are you still doing the scratch<br>
+<br>
+are you eating properly?<br>
+how many bottles of water everyday?<br>
+please do take care of yourself okay<br><br>
+please be safe okay<br>
+love you maa <br>
+good night<br><br>
 
 
 
