--- a/index.html
+++ b/index.html
@@ -606,6 +606,44 @@ love you maa <br>
 good night<br><br>
 
 
+<br><br>
+<hr>
+<br><br>
+26-october-2023 9:03PM<br>
+<br>
+oii oiiii oiiiiii<br>
+did you forget about me ?<br>
+-_-<br>
+bad bad its been 10 days<br>
+stupid potato, bla bla bla<br>
+.<br>
+.<br>
+.<br>
+hey.....<br>
+tell me are you okay?<br>
+are you fine?<br>
+i don't know sometimes from few days im something bothering me like something unknown feel like keep reaping in mind "how is my puja is she okay"? like that<br>
+even you said, you'll be fine, my soul keep bothering<br>
+please be safe <br>
+please,...please stay safe...<br>
+.<br>
+.<br>
+i..i can't imagine a life without you...<br>
+please be safe<br>
+please takecare of yourself...please<br>
+don't forget we need to roam world together, so please do take care of your health okay!!!<br>
+please be safe<br>
+  🙄 i don't know why, my mind going high on overthinking again and again.<br>
+please always be safe...<br>
+<br>
+now i will pray and try to sleep,<br>
+  🙄atleast My princes songs may help me fall a sleep by reducing overthinking,<br>
+good night<br>
+please be safe<br>
+alY<br>
+my princess<br>
+please always be safe and stay safe<br>
+<br><br>
 
 
 
