--- a/index.html
+++ b/index.html
@@ -645,7 +645,28 @@ my princess<br>
 please always be safe and stay safe<br>
 <br><br>
 
-
+<hr>
+<br>
+<br>
+27-oct-2023 9:27PM<br>
+<br>
+Honey im Home ^-^<br>
+<br>
+oii... how are you?<br>
+potato.... my sweet potato<br>	
+hope you are doing well, <br>
+eat well at time ok, <br>
+and mine, im also fine. just thinking about, how my half is doing there...<br>
+<br>
+huh!!!!!!<br>
+its about 10 days, if i keep writing it may become a history book to read <br>
+gomen<br><br>
+for now lets sleep<br>
+good night princes<br>
+always love you so much<br>more and more<br><br>
+<b>
+and lastly a small question, shall i keep this number (700...280) keep alive for you. cz its about to dissapear, if you want i'll try to keep it alive by recharching once per two months<br><br>
+</b><br><br>
 
 <!--- end of pass--->  
 <br><hr><br>
