--- a/index.html
+++ b/index.html
@@ -667,7 +667,22 @@ always love you so much<br>more and more<br><br>
 <b>
 and lastly a small question, shall i keep this number (700...280) keep alive for you. cz its about to dissapear, if you want i'll try to keep it alive by recharching once per two months<br><br>
 </b><br><br>
-
+<hr> 
+<br>
+28-oct-2023. 10:12PM<br>
+Oiiii oii oii <br>
+' knock knock...'. <br> who's there?...<br>
+If anyone is there, please tell my potato I'm missing her so much...<br>
+Tell her I will buy an ice cream, tell her to come home early<br>
+<br>
+Hey are you fine?<br>
+🙄I guess I'm worring too much, sorry I can't resist<br>
+Please be safe and sound okk!!!!<br>
+<br>
+Hinata...<br>
+The moon is so beautiful isn't it, ?<br>
+Let's fall a sleep over watching it.<br>
+Good night, sleep well 💞<br>
 <!--- end of pass--->  
 <br><hr><br>
 
