--- a/index.html
+++ b/index.html
@@ -682,7 +682,36 @@ Please be safe and sound okk!!!!<br>
 Hinata...<br>
 The moon is so beautiful isn't it, ?<br>
 Let's fall a sleep over watching it.<br>
-Good night, sleep well 💞<br>
+Good night, sleep well 💞<br><br><br>
+               <br><hr><br>
+<br>
+29-october-2023 : 6:49PM<br>
+konichiwa potato chan...<br>
+wanna see something,  😅 😅<br>
+ <a href="#">click and see 😅</a><br>
+<br>
+today i guess i slept well more than 10hrs, hmm... i guess its long, <br>
+our exams are near, mine in december 2nd and 3rd week . and hope you also studying well, lets study best for the exams <br>
+we are the best ^-^<br>
+always <br>
+<br>
+now im on terrace beside tesla both we are staring at Sky  😅, saying things to moon to forward to my Princess. Did you received any?<br>
+if not -_- lets beat the moon<br>
+<br>
+hmmmmmmmmm..........<br>
+Please take care of yourself and always be safe and strong okay!!!!<br>
+please be safe<br>
+sorry if i again started annoying you 🙄<br>
+<br><br>
+its about 10:15<br>
+so...<br>
+<i>soo....?</i><br>
+soooo.........<br>
+LOVE YOU MY SWEET POTATO ^-^, I'M GONNA EAT YOU 😋<br>
+for now<br>
+Good night sleep well. come in my dreams<br>
+Always love you my princess
+<br><br><br>
 <!--- end of pass--->  
 <br><hr><br>
 
