--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@ Good night, sleep well 💞<br><br><br>
 29-october-2023 : 6:49PM<br>
 konichiwa potato chan...<br>
 wanna see something,  😅 😅<br>
- <a href="#">click and see 😅</a><br>
+ <a href="https://youtube.com/shorts/ESOAglEDqZ4?feature=share" class="mypap3">click and see 😅</a><br>
 <br>
 today i guess i slept well more than 10hrs, hmm... i guess its long, <br>
 our exams are near, mine in december 2nd and 3rd week . and hope you also studying well, lets study best for the exams <br>
