--- a/index.html
+++ b/index.html
@@ -712,6 +712,30 @@ for now<br>
 Good night sleep well. come in my dreams<br>
 Always love you my princess
 <br><br><br>
+
+<hr><br><br>
+30-oct-2023 9:39PM<br><br>
+POTATO... oiii potato... pooootaaatttoooo<br>
+how areeeeee yyoooouuuuuuu?<br>
+aaaarrreeeee yyyoooouuuuuu fineeeee?<br>
+hope you are well, not just a hope, a faith in GOD. do well take care of yourself.<br>
+please be safe<br>
+.<br>
+....<br>
+......<br>
+........<br>
+.....<br>
+...<br>
+.<br>
+don't mind, a nerd me don't have anywords to say to you now,<br>
+i.....i...just want to look into your eyes by holdint your hands...👉👈<br>
+....<br>
+Now im going to sleep so....<br>
+Good night sleep well,<br>
+MY Princess<br>
+Always love you soo much ...<br>
+^-^<br><br>
+               
 <!--- end of pass--->  
 <br><hr><br>
 
