--- a/index.html
+++ b/index.html
@@ -734,7 +734,23 @@ Now im going to sleep so....<br>
 Good night sleep well,<br>
 MY Princess<br>
 Always love you soo much ...<br>
-^-^<br><br>
+^-^<br><br><hr>
+               <br><br>
+               31-october-2023  11:43PM<br><br>
+               hey... Mitsuha!<br>
+               did you saw that, tomorrow is november-1 .<br>
+               huuh! i feel days are passing fast, i still feeling like the mid of july just few days ago.....<br>
+               how you are, i don't know you are fine or not what you gonna say, my soul keep bothering that you aren't well, i keep praying the time for you to be happy,hope god will listen to me.<br>
+               tomorrow im going to a place that is 500KM far from my place, im going to participate in a competetion which i promoted to next level from previous one<br>
+               ...<br>
+               still im not getting any exitement about it...<br>
+               👉👈 im wishing you to say me good things like always you use to do, when im about to take a exam back in days.<br>
+               now im going there with your songs, just imagining you giving me motivation ,wishing......<br>
+               so, now im going to sleep<br>
+               hope you are sleeping well,<br>
+               Good night,sweet dreams,come in my dreams<br>
+               Love you Mitsuha ,ALways even how far iam from you<br>
+               Aisteru...<br><br>
                
 <!--- end of pass--->  
 <br><hr><br>
