--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@ Good night, sleep well 💞<br><br><br>
 <br>
 29-october-2023 : 6:49PM<br>
 konichiwa potato chan...<br>
-wanna see something,  😅 😅<br>
+wanna see something,  😅 😅<br><br><br><br>
  <a href="https://youtube.com/shorts/ESOAglEDqZ4?feature=share" class="mypap3">click and see 😅</a><br>
 <br>
 today i guess i slept well more than 10hrs, hmm... i guess its long, <br>
@@ -750,8 +750,46 @@ Always love you soo much ...<br>
                hope you are sleeping well,<br>
                Good night,sweet dreams,come in my dreams<br>
                Love you Mitsuha ,ALways even how far iam from you<br>
-               Aisteru...<br><br>
-               
+               Aisteru...<br><br><br>
+               <hr>
+               <br>
+               <hr>
+               <br><br>
+                01-Nov-2023 6:24PM<br><br>
+                hey...how are you?<br>
+                hope youre well.<br>
+                today my journey to that place start at 11:45PM train to my place. i may reach around tomorrow mornig 8 am or 9AM...<br>
+                i thought you may...     👉👈<br>
+                now i wanna show you something im going with <br>
+                <img src="spec1.jpeg"/> <br>
+                the one you preferred me those was amazing,i thougt to wear later at december, now atleast im going by wearing your suggestion ^-^<br>
+                <br>
+                <img src="spec2.jpeg" /><br>😅😅😅😅<br>
+                <br>
+                <img src="spec3.jpeg"/><br>
+                😅😅 i clicked weird i'll show them later, <br><br>
+                oiii main thing im not takingh my laptop with and there while competetion they provide the hackathon hall so, dont mind if i fail to text you and i may return home around sunday night. if i get chance at competetion place i'll try to tell you and share with you thing<br>
+            ....since after mom , you the once im only used to share things in family...<br>
+            for now im going to pack things so, okay bye<br>
+            good night<br>
+            sleep early okay and eat well ,,, if you get chance to read this message dont forget to trim your nials okay..!!!<br>
+            Love you maa bye, take care and please be safe😊<br>
+            <br>
+            👉....👈<br>
+            can i get a K...<br>
+            🙄<br>
+            if not,no problem i'll wait to reach disneyland<br><br>
+            Bye <br>
+            love you honey😊<br>
+            always love you...<br>
+            takecare,dont forget to drink water, <br>
+            i'll be home soon, dont worry i'll be safe and alert all the time. i dont go to anyone matter, and i dont accept to friend with any girls. <br>
+            please be safe<br>
+            i'll be home soon<br>
+            Love you😋<br>
+            <br>
+            Ittekimas....<br><br>
+                
 <!--- end of pass--->  
 <br><hr><br>
 
