--- a/index.html
+++ b/index.html
@@ -373,8 +373,7 @@ just wait a little im about to say about this entire competition journey to you 
      <img src="gtm25.jpg"/><br><br>
      <img src="gtm26.jpg"/><br><br>
      <img src="dingtm1.jpg"/><br><br>
-     <div class="mypap2"><a href="https://www.youtube.com/playlist?list=PL187Fo28DikbQJo3ommfYLbO9xN4uqIad" ><span   >click here to see my gitam universtity toor for you...</span></a> </div>   <br>
-     
+  
 <br>
 in day 1 we reached the city and near there this sisters priyas home, her family invite us then we went and fresh up lunch there, then at evening we reached college<br>
 day2: registration and the seminar then attended master classes there, then priya sister's father take us to beach and few places there and the day went like that,<br>
@@ -392,6 +391,9 @@ love you soooooooooooo much my mitsuha<br>
 dont mind im tooo sleepy ask me what doubts you have i will clear all, okay dont hesitate to ask any<br>
 so now its around 2:15 AM so <br>
 love you good night sleep well<br><br>
+            <br>
+               <div class="mypap2"><a href="https://www.youtube.com/playlist?list=PL187Fo28DikbQJo3ommfYLbO9xN4uqIad" ><span   >click to see gitam universtity toor for you...</span></a> </div>   <br>
+     <br><br>
 
 
 <!--- end of pass--->  
