--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -322,7 +323,26 @@ My lucky charm<br> you are the best always<br><br>
         always love you soooo much more and more and even more <br>
         my only princess<br>
         love you...<br><br>
+<hr><br>
+11-Nov-2023 8:41PM<br>
+<br>
+Ohio Mitsuha chan...<br>
+Happy Diwali, be shile like a bright light always keep a bright smile on your face 😊<br>
+my cute cute sweet potato be careful with crakers okay!!!! <br>
+and oiii do wear spects if you choose to fire crackers and all. be careful<br>
+<br>
+my feaver all went away from me i guess, and that "Dabur chavanpras" a little weird in taste, but if you👉👈, give me a k, forgetting "this 🤮", i will like to take it daily 😊<br>
+😅😅😅<br>
+i guess i would like that while getting feed by a K 😅😅😅<br>
+gomen gomen😅😅<br>
+oii daijobu i will eat it a half tea-spoon or a tea-spoon daily, when come to today i will eat after this day end if i get woke else i will eat tomorrow<br>
+for now im so, tired so now im going to sleep. and as my promise its a weekend so lets try our best to complete 8+hrs of sleep okay, else i may.... give you a punishment of the number of negative hours of sleeps into K hours 😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁😁heheheh😁😁😁hehehe😁😁😁 so dont skip sleep okay<br><br>
+so<br>
 
+Good night my princess <br>
+Sleep well 8+ come in my dreams, lets talk so many of things<br>
+Always love you soo much no matter what, I Always love you 😊<br>
+My Hinata💝<br><br>
 
 
             <br>
